--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 
 server.servlet.context-path=/math/operation
 server.error.whitelabel.enabled=false
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration
 
-#spring.datasource.url=jdbc:postgresql://postgresqldb:5432/users_db
-spring.datasource.url=jdbc:postgresql://localhost:5432/users_db
+spring.datasource.url=jdbc:postgresql://postgresqldb:5432/users_db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/users_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
