--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+
+#Solo a los fines de test, crea todo el esquema de la base cada vez que se inicia.
+#
 spring.jpa.hibernate.ddl-auto=create
 
 #Swagger
